--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -25,7 +25,6 @@ env:
   CARGO_HUSKY_DONT_INSTALL_HOOKS: true
   COMPLETION_DIR: "target/tmp/bottom/completion/"
   MANPAGE_DIR: "target/tmp/bottom/manpage/"
-  RUST_VERSION: "1.91.0"
 
 permissions:
   id-token: write
@@ -135,6 +134,11 @@ jobs:
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 1
+
+      - name: Read Rust version
+        run: |
+          VER=$(cat ".github/ci/rust_version")
+          echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
         if: matrix.info.container == ''
@@ -339,6 +343,11 @@ jobs:
         run: |
           choco install -y wixtoolset --no-progress;
 
+      - name: Read Rust version
+        run: |
+          VER=$(cat ".github/ci/rust_version")
+          echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
         with:
@@ -457,6 +466,11 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Read Rust version
+        run: |
+          VER=$(cat ".github/ci/rust_version")
+          echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
         with:
@@ -560,6 +574,11 @@ jobs:
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 1
+
+      - name: Read Rust version
+        run: |
+          VER=$(cat ".github/ci/rust_version")
+          echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
