--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -137,7 +137,7 @@ jobs:
 
       - name: Read Rust version
         run: |
-          VER=$(cat ".github/ci/rust_version")
+          VER=$(cat ".github/ci/rust_version.txt")
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
@@ -345,7 +345,7 @@ jobs:
 
       - name: Read Rust version
         run: |
-          VER=$(cat ".github/ci/rust_version")
+          VER=$(cat ".github/ci/rust_version.txt")
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
@@ -468,7 +468,7 @@ jobs:
 
       - name: Read Rust version
         run: |
-          VER=$(cat ".github/ci/rust_version")
+          VER=$(cat ".github/ci/rust_version.txt")
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
@@ -577,7 +577,7 @@ jobs:
 
       - name: Read Rust version
         run: |
-          VER=$(cat ".github/ci/rust_version")
+          VER=$(cat ".github/ci/rust_version.txt")
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
