--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Read Rust version
         run: |
-          VER=$(cat ".github/ci/rust_version.txt")
+          VER=$(cat .github/ci/rust_version.txt)
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
 
       - name: Set up Rust toolchain
