--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -50,6 +50,7 @@ jobs:
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Read Rust version
+        shell: bash
         run: |
           VER=$(cat .github/ci/rust_version.txt)
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
