--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -634,9 +634,11 @@ jobs:
           RPM_FILE=$(find bottom-*.rpm)
           # Display info
           rpm -qip $RPM_FILE
-          # Ensure that signatures other than MD5/SHA exist (https://github.com/ClementTsang/bottom/issues/1848)
+
           # Check signatures
-          rpm --checksig $RPM_FILE
+          rpm --checksig --verbose $RPM_FILE
+
+          # Save for future jobs
           echo "RPM_FILE=$RPM_FILE" >> $GITHUB_OUTPUT
 
       - name: Delete generated rpm folder
