also test local install

--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -638,6 +638,9 @@ jobs:
           # Check signatures
           rpm --checksig --verbose $RPM_FILE
 
+          # Try installing it
+          yum localinstall $RPM_FILE
+
           # Save for future jobs
           echo "RPM_FILE=$RPM_FILE" >> $GITHUB_OUTPUT
 
