Driveby echo of rust version

--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -141,6 +141,7 @@ jobs:
         run: |
           VER=$(cat .github/ci/rust_version.txt)
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+          echo "$VER"
 
       - name: Set up Rust toolchain
         if: matrix.info.container == ''
@@ -350,6 +351,7 @@ jobs:
         run: |
           VER=$(cat .github/ci/rust_version.txt)
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+          echo "$VER"
 
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
@@ -474,6 +476,7 @@ jobs:
         run: |
           VER=$(cat .github/ci/rust_version.txt)
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+          echo "$VER"
 
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
@@ -584,6 +587,7 @@ jobs:
         run: |
           VER=$(cat .github/ci/rust_version.txt)
           echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+          echo "$VER"
 
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
