--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -642,8 +642,10 @@ jobs:
 
       - name: Check rpm file signatures
         run: |
-          # Required because apparently this can get a bit weird, see https://github.com/ClementTsang/bottom/issues/1848
           rpm --checksig --verbose ${{ steps.verify.outputs.RPM_FILE }}
+          # Validate modern signature digest exist, see https://github.com/ClementTsang/bottom/issues/1848
+          rpm --checksig --verbose ${{ steps.verify.outputs.RPM_FILE }} | grep -q "SHA256"
+
 
       - name: Check rpm file signatures
         run: |
