--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -544,7 +544,7 @@ jobs:
 
       - name: Test installing generated Debian release
         run: |
-          sudo apt install ${{ steps.verify.outputs.DEB_FILE }} -y
+          sudo apt install ./${{ steps.verify.outputs.DEB_FILE }} -y
           btm -V
 
       - name: Delete generated Debian folder
