--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -106,7 +106,7 @@
 # Hides advanced options to stop a process on Unix-like systems.
 #disable_advanced_kill = false
 
-# Prevents performing any actions that affect the system.
+# Prevents performing any actions that affect the system (e.g. stopping processes).
 #read_only = false
 
 # Hides the kernel threads
