feature: add readonly mode (#1861)
* init

* Fixed code smells

* Updated documentation as per feedback

--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -106,6 +106,9 @@
 # Hides advanced options to stop a process on Unix-like systems.
 #disable_advanced_kill = false
 
+# Prevents performing any actions that affect the system (e.g. stopping processes).
+#read_only = false
+
 # Hides the kernel threads
 #hide_k_threads = false
 
