ci: skip clear cache if the PR is a fork

--- a/.github/workflows/clear_workflow_cache.yml
+++ b/.github/workflows/clear_workflow_cache.yml
@@ -17,6 +17,7 @@ on:
 
 jobs:
   clear-cache:
+    if: ${{ github.event_name != 'pull_request' || ! github.event.pull_request.head.repo.fork }} # If it is a PR, only if not a fork
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
