other: make the deb package conflict with the official "bottom" package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -213,6 +213,7 @@ assets = [
         "644",
     ],
 ]
+conflicts = "bottom"
 extended-description = """
 
 By default, bottom will look for a config file in ~/.config/bottom/bottom.toml. A config file can be specified \
