--- a/tests/valid_configs/styling_2.toml
+++ b/tests/valid_configs/styling_2.toml
@@ -11,13 +11,22 @@
 # - "nord-light".
 
 # This will have the lowest precedence if a custom colour palette is set,
-# or overriden if the command-line flag for a built-in theme is set.
+# or overridden if the command-line flag for a built-in theme is set.
 theme = "default"
 
 [styles.cpu]
 all_entry_color = "green"
 avg_entry_color = "red"
-cpu_core_colors = ["light magenta", "light yellow", "light cyan", "light green", "light blue", "cyan", "green", "blue"]
+cpu_core_colors = [
+  "light magenta",
+  "light yellow",
+  "light cyan",
+  "light green",
+  "light blue",
+  "cyan",
+  "green",
+  "blue",
+]
 
 [styles.memory]
 ram_color = "light magenta"
