other: disable skip CI for all-contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -699,7 +699,7 @@
   "projectOwner": "ClementTsang",
   "repoType": "github",
   "repoHost": "https://github.com",
-  "skipCi": true,
+  "skipCi": false,
   "commitConvention": "angular",
   "commitType": "docs"
 }
