--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ humantime = "2.3.0"
 indexmap = "2.11.4"
 indoc = "2.0.6"
 itertools = "0.14.0"
-# nohash = "0.2.0"
+nohash = "0.2.0"
 nvml-wrapper = { version = "0.11.0", optional = true, features = ["legacy-functions"] }
 regex = "1.11.2"
 rustc-hash = "2.1.1"
