--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -74,12 +74,10 @@ jobs:
           cargo install cargo-llvm-cov --version 0.6.11 --locked
 
       - name: Generate code coverage
-        run: |
-          cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info --locked --target=${{ matrix.info.target }}
+        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info --locked --target=${{ matrix.info.target }}
 
       # The token is generally not needed, but sometimes the default shared token hits limits.
       # Yes this is ugly as hell. Why this is not a built-in feature of GHA, I have no idea.
-
       - name: Upload to codecov.io (Attempt 1)
         id: upload_attempt_1
         uses: codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673 # v4.5.0
