--- a/.github/workflows/post_release.yml
+++ b/.github/workflows/post_release.yml
@@ -67,20 +67,10 @@ jobs:
         run: pip install -r docs/requirements.txt
 
       - name: Configure git user and email
-        run: |
-          git config --global user.name ${GIT_USER}
-          git config --global user.email ${GIT_EMAIL}
-          echo Name: $(git config --get user.name)
-          echo Email: $(git config --get user.email)
+        run: ./scripts/ci/configure_git.sh
 
       - name: Build and deploy docs with mike as the latest stable branch
-        run: |
-          cd docs
-          OLD_STABLE_VERSION=$(mike list stable | grep -Po '([0-9]+.[0-9]+.[0-9]+)' | head -n1)
-          echo ${OLD_STABLE_VERSION}
-          mike retitle --push stable ${OLD_STABLE_VERSION}
-          mike deploy --push --update-aliases ${RELEASE_VERSION} stable
-          mike retitle --push ${RELEASE_VERSION} "${RELEASE_VERSION} (stable)"
+        run: ./scripts/ci/release_stable_docs.sh
 
   chocolatey:
     needs: [initialize]
@@ -94,9 +84,6 @@ jobs:
       - name: Validate release version
         run: |
           echo "Release version: ${{ env.RELEASE_VERSION }}"
+
       - name: Trigger choco
-        run: |
-          curl -X POST https://api.github.com/repos/ClementTsang/choco-bottom/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.BOTTOM_PACKAGE_DEPLOYMENT }} \
-          --data '{ "event_type": "update", "client_payload": { "version": "'"$RELEASE_VERSION"'" } }'
+        run: ./scripts/ci/release_choco.sh
