--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -84,6 +84,7 @@ jobs:
         run: sleep 10
         if: github.event.inputs.isMock != 'true'
 
+      # As a workaround to immutable releases, we create it as a draft first, then manually publish it after.
       - name: Add all release files and create nightly release if not mock
         uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # 2.0.8
         if: github.event.inputs.isMock != 'true'
@@ -91,7 +92,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
           tag_name: "nightly"
-          draft: false
+          draft: true
           fail_on_unmatched_files: true
           files: |
             ./release/*
+
+      - name: Publish the draft release
+        run: gh release edit nightly --draft=false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
